Update Personal Website

--- a/index.html
+++ b/index.html
@@ -1,4 +1,231 @@
----
-layout: home
-author_profile: true
----
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<title>Chan Hong</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="shortcut icon" type="image/svg" href="images/favicon.ico"/>
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/custom.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+
+	<body class="is-preload">
+
+		<div id = "particles-js"></div>
+
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- <div id = "particles-js"></div> -->
+
+				<!-- Header -->
+					<header id="header">
+						<div class="inner">
+
+							<!-- Logo -->
+								<a href="index.html" class="logo" id = "home">
+									<span class="title">Yongchan (Chan) Hong</span>
+								</a>
+
+								<ul class="icons" id = "title2">
+									<li><a href="mailto:chong@g.hmc.edu" target="_blank" rel="noopener noreferrer" class="icon solid style1 fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href="https://www.linkedin.com/in/yongchanhong" target="_blank" rel="noopener noreferrer" class="icon brands style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://www.github.com/yongchand" target="_blank" rel="noopener noreferrer" class="icon brands style1 fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="./resume.pdf" target="_blank" rel="noopener noreferrer" class="fa style1 fa-book"></a></li>
+								</ul>
+
+							<!-- Nav -->
+								<nav>
+									<ul>
+										<li><a href="#menu">Menu</a></li>
+									</ul>
+								</nav>
+
+						</div>
+					</header>
+
+				<!-- Menu -->
+					<nav id="menu">
+						<h2>Menu</h2>
+						<ul>
+							<li><a href="#home" class = "menuitem">Home</a></li>
+							<li><a href="#publications" class = "menuitem">Publications</a></li>
+							<li><a href="#projects" class = "menuitem">Projects</a></li>
+							<li><a href="#achievements" class = "menuitem">Achievements</a></li>
+							<li><a href="#contact" class = "menuitem">Contact</a></li>
+						</ul>
+					</nav>
+
+				<!-- Main -->
+					<div id="main">
+						<div class="inner">
+							<header>
+								<img src="images/profile.jpg" alt="Profile Picture" class="profile">
+								<p>Hello World👋! I am an senior at <a href = "https://www.hmc.edu/" target="_blank" rel="noopener noreferrer">Harvey Mudd College</a> studying Mathematical and Computational Biology. I am interested in demystifying biological sequence data and unraveling the mystery behind them using computational methodologies including machine learning and mathematical modelling.</p>
+								<p>I have worked at two different labs and one capstone project. I have worked at <a href = "https://www.hmc.edu/biology/faculty-staff/hur/" target="_blank" rel="noopener noreferrer">Prof.Hur's Aging Lab</a> and <a href = "https://sites.google.com/a/g.hmc.edu/bushlab/" target="_blank" rel="noopener noreferrer">Prof.Bush's Computational Evolution Lab</a> and my capstone project was conducted with <a href = "https://www.3ds.com/products-services/biovia/" target="_blank" rel="noopener noreferrer">Dassault Systèmes Biovia</a> under the guidance of <a href = "https://www.cs.hmc.edu/~yjw/" target="_blank" rel="noopener noreferrer">Prof.Wu</a> and <a href = "https://eitm.org/portfolio/naim-matasci/" target="_blank" rel="noopener noreferrer">Dr. Matasci</a>. The capstone project focused on predicting antibody developability from sequences using machine learning. </p>
+								<p>I also worked as a software/data engineer at <a href = "https://krafton.com/en/games/battlegrounds/" target="_blank" rel="noopener noreferrer">Krafton PUBG</a> and <a href = "https://www.krustuniverse.com" target="_blank" rel="noopener noreferrer">Krust Universe</a> during my mandatory military service in Korea as a substitute, focusing on maintaining terabyte-scale data pipelines and creating data visualizations. </p>
+								<p>Outside of work, I love contributing to open-source projects, working out, or watching cute cat or <a href = "https://www.youtube.com/watch?v=wE6pEsjgdHo" target="_blank" rel="noopener noreferrer">capybara</a> videos. </p>
+								<p>I love talking with people and sharing insights, feel free to <a href = "https://app.simplymeet.me/chanhong/30min" target="_blank" rel="noopener noreferrer">connect</a> with me! </p>
+							</header>
+
+							<!-- HEADER FOR PUBLICATIONS -->
+							<header><h2 id = "publications" class = "divider" style = "margin-bottom: 0.4em;"><i style = "margin-right: 0.5em;" class="icon solid fa-book"></i> Publications</h2></header>
+							<section class="tiles">
+
+								<article class="style2">
+									<span class="image">
+										<img src="images/xenogi.png" alt="" />
+									</span>
+									<a href="https://doi.org/10.1186/s12859-023-05410-0" target="_blank" rel="noopener noreferrer">
+										<h2>xenoGI3: Reconstruction of Genomic Island</h2>
+										<div class="content">
+											<p>Reconstruct the evolution of gene families in clades of microbes using the DLTOR model</p>
+										</div>
+									</a>
+								</article>
+
+								<article class="style1">
+									<span class="image">
+										<img src="images/antibody.png" alt="" />
+									</span>
+									<a href="https://www.biorxiv.org/content/10.1101/2020.06.18.159798v1" target="_blank" rel="noopener noreferrer">
+										<h2>Predicting Antibody Developability from Sequence using Machine Learning</h2>
+										<div class="content">
+											<p>Extracted physicochemical features and learned embedding features using word2vec; Trained 7 models including
+												SVM, Random Forest, MLP, and evaluated the result using heatmap and pareto optimization.</p>
+										</div>
+									</a>
+								</article>
+
+								<article class="style2">
+									<span class="image">
+										<img src="images/hurlab.png" alt="" />
+									</span>
+									<a href="https://doi.org/10.1093/braincomms/fcac155" target="_blank" rel="noopener noreferrer">
+										<h2>Proteasome β5 subunit overexpression</h2>
+										<div class="content">
+											<p>Proteasome β5 subunit overexpression improves proteostasis during aging and extends lifespan in Drosophila melanogaster.</p>
+										</div>
+									</a>
+								</article>
+
+
+							</section>
+							
+							<!-- HEADER FOR PROJECTS  -->
+							<header><h2 id = "projects" class = "divider" style = "margin-top: 3em;"><i style = "margin-right: 0.5em;" class="icon solid fa-laptop-code"></i> Projects</h2></header>
+							<section class="tiles">
+
+								<article class="style5">
+									<span class="image">
+										<img src="images/klaytn.png" alt="" />
+									</span>
+									<a href="https://github.com/klaytn/klaytn-etl/" target="_blank" rel="noopener noreferrer">
+										<h2>Klaytn ETL</h2>
+										<div class="content">
+											<p>Python scripts for ETL (extract, transform and load) jobs for Klaytn blocks, transactions, ERC20 / ERC721 tokens, transfers, receipts, logs, contracts, internal transactions.</p>
+										</div>
+									</a>
+								</article>
+
+								<article class="style4">
+									<span class="image">
+										<img src="images/querybook.png" alt="" />
+									</span>
+									<a href="https://github.com/pinterest/querybook/tree/master/helm" target="_blank" rel="noopener noreferrer">
+										<h2>Pinterest Querybook</h2>
+										<div class="content">
+											<p>Created Helm chart of Pinterest Big Data IDE Querybook</p>
+										</div>
+									</a>
+								</article>
+
+								<article class="style5">
+									<span class="image">
+										<img src="images/siqr.png" alt="" />
+									</span>
+									<a href="" target="_blank" rel="noopener noreferrer">
+										<h2>SIQR Model</h2>
+										<div class="content">
+											<p>Worked on constructing mathematical model for SIQR model.</p>
+										</div>
+									</a>
+								</article>
+
+							</section>
+
+							<!-- HEADER FOR ACHIEVEMENTS  -->
+							<header><h2 id = "Achievements" class = "divider" style = "margin-top: 3em;"><i style = "margin-right: 0.5em;" class="icon solid fa-laptop-code"></i> Achievements</h2></header>
+							<section class="tiles">
+
+								<article class="style4">
+									<span class="image">
+										<img src="images/cka.png" alt="" />
+									</span>
+									<a href="https://github.com/klaytn/klaytn-etl/" target="_blank" rel="noopener noreferrer">
+										<h2>Certified Kubernetes Adminstrator</h2>
+										<div class="content">
+											<p>Acheived CKA to demonstrate my proficiency in Kubernetes.</p>
+										</div>
+									</a>
+								</article>
+
+								<article class="style5">
+									<span class="image">
+										<img src="images/tdc.png" alt="" />
+									</span>
+									<a href="https://github.com/pinterest/querybook/tree/master/helm" target="_blank" rel="noopener noreferrer">
+										<h2>Tensorflow Developer Certificate</h2>
+										<div class="content">
+											<p>Achieved Tensorflow Developer Certificate during the Google Developers Machine Learning Bootcamp</p>
+										</div>
+									</a>
+								</article>
+
+								<article class="style4">
+									<span class="image">
+										<img src="images/gml.png" alt="" />
+									</span>
+									<a href="https://rsvp.withgoogle.com/events/google-machine-learning-bootcamp-kr-2023" target="_blank" rel="noopener noreferrer">
+										<h2>Google Developers Machine Learning Bootcamp</h2>
+										<div class="content">
+											<p>Took Coursera `Deep Learning` and `DeepLearning.AI Tensorflow Developer` coursework and participated in multiple machine learning workshops with startups.</p>
+										</div>
+									</a>
+								</article>
+
+							</section>
+
+
+						</div>
+					</div>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<div class="inner">
+							<section>
+								<h2 id = "contact" style = "margin-bottom: 1em;">Get In Touch</h2>
+								<ul class="icons">
+									<li><a href="mailto:chong@g.hmc.edu" target="_blank" rel="noopener noreferrer" class="icon solid style1 fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href="https://www.linkedin.com/in/yongchanhong" target="_blank" rel="noopener noreferrer" class="icon brands style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://www.github.com/yongchand" target="_blank" rel="noopener noreferrer" class="icon brands style1 fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="./resume.pdf" target="_blank" rel="noopener noreferrer" class="fa style1 fa-book"></a></li>
+								</ul>
+							</section>
+
+						</div>
+					</footer>
+
+			</div>
+
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
+
+	</body>
+</html>
