Update with feedback

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 							<!-- Logo -->
 								<a href="index.html" class="logo" id = "home">
 									<span class="title">Yongchan (Chan) Hong</span>
+									<span class="title3" style="color:blue"> Currently looking for Computational Biology Ph.D. program!</span>
 								</a>
 
 								<ul class="icons" id = "title2">
@@ -64,9 +65,9 @@
 						<div class="inner">
 							<header>
 								<img src="images/profile.jpg" alt="Profile Picture" class="profile">
-								<p>Hello World👋! I am an senior at <a href = "https://www.hmc.edu/" target="_blank" rel="noopener noreferrer">Harvey Mudd College</a> studying Mathematical and Computational Biology. I am interested in demystifying biological sequence data and unraveling the mystery behind them using computational methodologies including machine learning and mathematical modelling.</p>
-								<p>I have worked at two different labs and one capstone project. I have worked at <a href = "https://www.hmc.edu/biology/faculty-staff/hur/" target="_blank" rel="noopener noreferrer">Prof.Hur's Aging Lab</a> and <a href = "https://sites.google.com/a/g.hmc.edu/bushlab/" target="_blank" rel="noopener noreferrer">Prof.Bush's Computational Evolution Lab</a> and my capstone project was conducted with <a href = "https://www.3ds.com/products-services/biovia/" target="_blank" rel="noopener noreferrer">Dassault Systèmes Biovia</a> under the guidance of <a href = "https://www.cs.hmc.edu/~yjw/" target="_blank" rel="noopener noreferrer">Prof.Wu</a> and <a href = "https://eitm.org/portfolio/naim-matasci/" target="_blank" rel="noopener noreferrer">Dr. Matasci</a>. The capstone project focused on predicting antibody developability from sequences using machine learning. </p>
-								<p>I also worked as a software/data engineer at <a href = "https://krafton.com/en/games/battlegrounds/" target="_blank" rel="noopener noreferrer">Krafton PUBG</a> and <a href = "https://www.krustuniverse.com" target="_blank" rel="noopener noreferrer">Krust Universe</a> during my mandatory military service in Korea as a substitute, focusing on maintaining terabyte-scale data pipelines and creating data visualizations. </p>
+								<p>Hello World👋! I am an senior at <a href = "https://www.hmc.edu/" target="_blank" rel="noopener noreferrer">Harvey Mudd College</a> studying Mathematical and Computational Biology. <b> I am interested in demystifying biological sequence data and unraveling the mystery behind them using computational methodologies including machine learning and mathematical modelling. </b></p>
+								<p>I have extensive research experience involving both wet and dry labs. I have worked at <a href = "https://www.hmc.edu/biology/faculty-staff/hur/" target="_blank" rel="noopener noreferrer">Prof.Hur's Aging Lab</a> and <a href = "https://sites.google.com/a/g.hmc.edu/bushlab/" target="_blank" rel="noopener noreferrer">Prof.Bush's Computational Evolution Lab</a> and my capstone project was conducted with <a href = "https://www.3ds.com/products-services/biovia/" target="_blank" rel="noopener noreferrer">Dassault Systèmes Biovia</a> under the guidance of <a href = "https://www.cs.hmc.edu/~yjw/" target="_blank" rel="noopener noreferrer">Prof.Wu</a> and <a href = "https://eitm.org/portfolio/naim-matasci/" target="_blank" rel="noopener noreferrer">Dr. Matasci</a>. The capstone project focused on predicting antibody developability from sequences using machine learning. </p>
+								<p>I also have an industry expereince working as a software/data engineer. I worked as a software/data engineer at <a href = "https://krafton.com/en/games/battlegrounds/" target="_blank" rel="noopener noreferrer">Krafton PUBG</a> and <a href = "https://www.krustuniverse.com" target="_blank" rel="noopener noreferrer">Krust Universe</a> during my mandatory military service in Korea as a substitute, focusing on maintaining terabyte-scale data pipelines and creating data visualizations. </p>
 								<p>Outside of work, I love contributing to open-source projects, working out, or watching cute cat or <a href = "https://www.youtube.com/watch?v=wE6pEsjgdHo" target="_blank" rel="noopener noreferrer">capybara</a> videos. </p>
 								<p>I love talking with people and sharing insights, feel free to <a href = "https://app.simplymeet.me/chanhong/30min" target="_blank" rel="noopener noreferrer">connect</a> with me! </p>
 							</header>
@@ -104,7 +105,7 @@
 									<span class="image">
 										<img src="images/hurlab.png" alt="" />
 									</span>
-									<a href="https://doi.org/10.1093/braincomms/fcac155" target="_blank" rel="noopener noreferrer">
+									<a href="https://doi.org/10.1038/s41598-019-39508-4" target="_blank" rel="noopener noreferrer">
 										<h2>Proteasome β5 subunit overexpression</h2>
 										<div class="content">
 											<p>Proteasome β5 subunit overexpression improves proteostasis during aging and extends lifespan in Drosophila melanogaster.</p>
@@ -127,6 +128,7 @@
 										<h2>Klaytn ETL</h2>
 										<div class="content">
 											<p>Python scripts for ETL (extract, transform and load) jobs for Klaytn blocks, transactions, ERC20 / ERC721 tokens, transfers, receipts, logs, contracts, internal transactions.</p>
+											<span class="title3"><b>Open Source Creation</b></span>
 										</div>
 									</a>
 								</article>
@@ -139,6 +141,7 @@
 										<h2>Pinterest Querybook</h2>
 										<div class="content">
 											<p>Created Helm chart of Pinterest Big Data IDE Querybook</p>
+											<span class="title3"><b>Open Source Contribution</b></span>
 										</div>
 									</a>
 								</article>
@@ -151,6 +154,7 @@
 										<h2>SIQR Model</h2>
 										<div class="content">
 											<p>Worked on constructing mathematical model for SIQR model.</p>
+											<span class="title2"><b>In Class Work</b></span>
 										</div>
 									</a>
 								</article>
@@ -158,7 +162,7 @@
 							</section>
 
 							<!-- HEADER FOR ACHIEVEMENTS  -->
-							<header><h2 id = "Achievements" class = "divider" style = "margin-top: 3em;"><i style = "margin-right: 0.5em;" class="icon solid fa-laptop-code"></i> Achievements</h2></header>
+							<header><h2 id = "achievements" class = "divider" style = "margin-top: 3em;"><i style = "margin-right: 0.5em;" class="icon solid fa-laptop-code"></i> Achievements</h2></header>
 							<section class="tiles">
 
 								<article class="style4">
