Update website with GA

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/custom.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-2C85QSEVVJ"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+		gtag('config', 'G-2C85QSEVVJ');
+		</script>
 	</head>
 
 	<body class="is-preload">
@@ -28,7 +36,7 @@
 							<!-- Logo -->
 								<a href="index.html" class="logo" id = "home">
 									<span class="title">Yongchan (Chan) Hong</span>
-									<span class="title3" style="color:blue"> Currently looking for Computational Biology Ph.D. program!</span>
+									<span class="title3" style="color:blue"> Currently looking for Computational Biology graduate program!</span>
 								</a>
 
 								<ul class="icons" id = "title2">
@@ -150,7 +158,7 @@
 									<span class="image">
 										<img src="images/siqr.png" alt="" />
 									</span>
-									<a href="" target="_blank" rel="noopener noreferrer">
+									<a href="https://github.com/yongchand/SIQR" target="_blank" rel="noopener noreferrer">
 										<h2>SIQR Model</h2>
 										<div class="content">
 											<p>Worked on constructing mathematical model for SIQR model.</p>
